--- a/app/globals.css
+++ b/app/globals.css
@@ -1,18 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 240,240,240;
   --background-end-rgb: 255, 255, 255;
+  --primary-color: #F58740;
+  --secondary-color: #F5A740;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+  }
+} */
+
+@layer base {
+  html {
+    font-family: 'Poppins', sans-serif;
   }
 }
 
@@ -26,8 +35,51 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer components {
+  .topbar {
+    @apply fixed top-0 z-30 flex w-full items-center justify-between bg-gray-900 bg-opacity-50 px-6 py-3;
+  }
+  
+  .main-container {
+    @apply flex flex-1 sm:max-w-[80vw] w-screen sm:mx-auto sm:px-0 px-6 md:pt-12 pt-10 pb-6;
+  }
+  
+  .hero{
+    @apply md:space-y-8 space-y-4 flex-col items-center;
+  }
+  
+  .main-button {
+    @apply border-white md:text-lg sm:text-sm text-xs border-2 text-white px-6 py-3 rounded-3xl transition-all;
+  }
+  
+  .main-button:hover{
+    @apply bg-white text-black;
+  }
+  
+  .section-head {
+    @apply lg:text-2xl;
+  }
+  
+  .caption-1{
+    @apply lg:text-4xl md:text-3xl text-2xl font-bold text-primary;
+  }
+  
+  .caption-2{
+    @apply lg:text-2xl md:text-xl text-sm font-medium text-secondary;
+  }
+  
+  .caption-3{
+    @apply lg:text-xl md:text-base text-xs font-medium text-secondary;
+  }
+  
+  .card {
+    @apply rounded-md shadow;
   }
 }
