update(kegiatan): change the content of kegiatan

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,4 +82,15 @@ body {
   .card {
     @apply rounded-md shadow-2xl;
   }
+  
+  .desc{
+    @apply lg:text-sm text-xs text-justify truncate text-ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
