update(visi-misi-images): lower the image size

--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
   --background-end-rgb: 255, 255, 255;
   --primary-color: #F58740;
   --secondary-color: #F5A740;
+  --light-secondary-color: #F5BC3B;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -81,16 +82,5 @@ body {
   
   .card {
     @apply rounded-md shadow-2xl;
-  }
-  
-  .desc{
-    @apply lg:text-sm text-xs text-justify truncate text-ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  }  
 }
